netpol/allow-to-api-from-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-ingress-to-api
  namespace: cloudacademy
spec:
  podSelector:
    matchLabels:
      role: api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: aks-nginx-ingress-nginx-ingress
        namespaceSelector:
          matchLabels:
            name: nginx-ingress
